--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-markdown": "^7.0.1",
+    "remark-gfm": "^3.0.0",
     "swr": "^1.0.1"
   },
   "devDependencies": {
