--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-syntax-highlighter": "^13.5.2",
     "graphql": "^15.6.1",
     "graphql-request": "^3.6.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^7.0.1",
+    "react-syntax-highlighter": "^15.4.4",
     "remark-gfm": "^3.0.0",
     "swr": "^1.0.1"
   },
