--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@types/react-syntax-highlighter": "^13.5.2",
     "graphql": "^15.6.1",
     "graphql-request": "^3.6.0",
+    "mongodb": "^4.1.3",
+    "mongoose": "^6.0.11",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^7.0.1",
     "react-syntax-highlighter": "^15.4.4",
     "remark-gfm": "^3.0.0",
+    "sharp": "^0.29.1",
     "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.11.97",
     "@types/react": "^17.0.30",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
