--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/react-syntax-highlighter": "^13.5.2",
     "graphql": "^15.6.1",
-    "graphql-request": "^3.6.0",
+    "graphql-request": "^3.6.1",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.11",
     "next": "11.1.2",
+    "nodemailer": "^6.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^7.0.1",
@@ -25,8 +25,9 @@
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.97",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "^17.0.30",
-    "eslint": "7.32.0",
+    "eslint": "^8.0.1",
     "eslint-config-next": "11.1.2",
     "sass": "^1.43.2",
     "typescript": "4.4.4"
